objects/CRM_Mtg_Application_Target__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Mtg_Achieved_Applications_Amt__c</fullName>
        <label>Achieved Applications $</label>
        <summarizedField>CRM_Mortgage_Application_Data__c.CRM_Mtg_Application_Amount__c</summarizedField>
        <summaryForeignKey>CRM_Mortgage_Application_Data__c.CRM_Mtg_Application_Target__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Achieved_Applications__c</fullName>
        <label>Achieved Applications #</label>
        <summaryForeignKey>CRM_Mortgage_Application_Data__c.CRM_Mtg_Application_Target__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_BDM_Target__c</fullName>
        <label>BDM Target</label>
        <referenceTo>CRM_Mtg_BDM_Target__c</referenceTo>
        <relationshipLabel>Application Targets</relationshipLabel>
        <relationshipName>Application_Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_BDM__c</fullName>
        <formula>CRM_Mtg_BDM_Target__r.CRM_Mtg_BDM__r.FirstName &amp; &apos; &apos; &amp; CRM_Mtg_BDM_Target__r.CRM_Mtg_BDM__r.LastName</formula>
        <label>BDM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Is_Default__c</fullName>
        <formula>CRM_Mtg_BDM_Target__r.CRM_Mtg_Default_Record__c</formula>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Month__c</fullName>
        <formula>TEXT(CRM_Mtg_BDM_Target__r.CRM_Mtg_Month__c)</formula>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Non Conforming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Near Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Target_Applications_Amt__c</fullName>
        <label>Target Applications $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Target_Applications__c</fullName>
        <label>Target Applications #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Target_Date__c</fullName>
        <formula>CRM_Mtg_BDM_Target__r.CRM_Mtg_Target_Date__c</formula>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Unique_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Year__c</fullName>
        <formula>TEXT(CRM_Mtg_BDM_Target__r.CRM_Mtg_Year__c)</formula>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Application Target</label>
    <nameField>
        <displayFormat>AppTgt-{00000000}</displayFormat>
        <label>Record No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>